fix best goods slider on mobile

--- a/resources/sass/pagination.sass
+++ b/resources/sass/pagination.sass
@@ -13,7 +13,8 @@
     p
         flex: 0 0 20px
 
-.page-count
+.page-count,
+.hidden-page-count
     background-color: #ffff
     border: 1px solid #003b95
     display: block
@@ -21,6 +22,9 @@
     height: 20px
     border-radius: 100px
     margin: 8px
+
+.hidden-page-count
+    visibility: hidden
 
 .page-link-previous
     margin-right: 30px
